<package>
  <name>evapc_ros</name>
  <version>0.0.6</version>
  <description>
    The evapc_ros meta package provides all the basic packages for model and navigation of Evarobot.
  </description>
  <author>Mehmet Akcakoca</author>
  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/evapc_ros</url>
  <url type="repository">https://github.com/inomuh/evapc_ros</url>
  <url type="bugtracker">https://github.com/inomuh/evapc_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>evarobot_description</run_depend>
  <run_depend>evarobot_navigation</run_depend>
  <run_depend>evarobot_pose_ekf</run_depend>
  <run_depend>evarobot_slam</run_depend>
  <run_depend>evarobot_state_publisher</run_depend>
  <run_depend>evapc_start</run_depend>
  <run_depend>evarobot_diagnostics</run_depend>
  <run_depend>evarobot_viz</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
