<?xml version="1.0"?>
<package>
  <name>evarobot_diagnostics</name>
  <version>0.0.6</version>
  <description>evarobot diagnostics</description>

  <author>Mehmet Akcakoca</author>
  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/evarobot_diagnostics</url>
  <url type="repository">https://github.com/inomuh/evapc_ros</url>
  <url type="bugtracker">https://github.com/inomuh/evapc_ros/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>diagnostic_aggregator</run_depend>

</package>
