<?xml version="1.0"?>
<package>
  <name>evarobot_navigation</name>
  <version>0.0.1</version>
  <description>The evarobot_navigation package</description>

  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://evarobot.com</url>
  <url type="repository">https://github.com/inomuh/evapi_ros</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>move_base</run_depend>
  <run_depend>roscpp</run_depend>

</package>
