<?xml version="1.0"?>
<package>
  <name>evarobot_navigation</name>
  <version>0.0.5</version>
  <description>evarobot_navigation provides roslaunch script files to navigate the Evarobot.</description>

  <author>Mehmet Akcakoca</author>
  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/evarobot_navigation</url>
  <url type="repository">https://github.com/inomuh/evapc_ros</url>
  <url type="bugtracker">https://github.com/inomuh/evapc_ros/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>move_base</run_depend>
  <run_depend>roscpp</run_depend>

</package>
