<?xml version="1.0"?>
<package>
  <name>evarobot_pose_ekf</name>
  <version>0.0.0</version>
  <description>The evarobot_pose_ekf package</description>
  
  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://evarobot.com</url>
  <url type="repository">https://github.com/inomuh/evapi_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
