<?xml version="1.0"?>
<package>
  <name>evarobot_slam</name>
  <version>0.0.1</version>
  <description>The evarobot_slam package</description>

  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://evarobot.com</url>
  <url type="repository">https://github.com/inomuh/evapi_ros</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rplidar_ros</build_depend>
  <build_depend>teleop_twist_keyboard</build_depend>
  <run_depend>rplidar_ros</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>

</package>
