<?xml version="1.0"?>
<package>
  <name>evarobot_slam</name>
  <version>0.0.5</version>
  <description>evarobot_slam provides roslaunch scripts for SLAM map building with the Evarobot.</description>

  <author>Mehmet Akcakoca</author>
  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/evarobot_slam</url>
  <url type="repository">https://github.com/inomuh/evapc_ros</url>
  <url type="bugtracker">https://github.com/inomuh/evapc_ros/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rplidar_ros</build_depend>
  <build_depend>teleop_twist_keyboard</build_depend>
  <run_depend>rplidar_ros</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>

</package>
