<?xml version="1.0"?>
<package>
  <name>evarobot_state_publisher</name>
  <version>0.0.1</version>
  <description>The evarobot_state_publisher package</description>

  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://evarobot.com</url>
  <url type="repository">https://github.com/inomuh/evapi_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
